--- a/Manuscript/FinalDraft_rev/aa_kevin.bib
+++ b/Manuscript/FinalDraft_rev/aa_kevin.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Fri, 08 Sep 2017.
+%% Created using Papers on Tue, 19 Sep 2017.
 %% http://papersapp.com/papers/
 
 @article{Anonymous:2015gf,
@@ -489,16 +489,6 @@ pages = {2295--2300},
 month = feb
 }
 
-@article{Yeakel:2013vz,
-author = {Yeakel, Justin D and Moore, J W and Guimar{\~a}es Jr, Paulo R and de Aguiar, M A M},
-title = {{Synchronisation and stability in river metapopulation networks}},
-journal = {Ecol. Lett.},
-year = {2014},
-volume = {17},
-number = {3},
-pages = {273--283}
-}
-
 @article{Ciancio:2008p3440,
 author = {Ciancio, JE and Pascual, MA and Botto, F and Frere, E and Iribarne, O},
 title = {{Trophic relationships of exotic anadromous salmonids in the southern Patagonian Shelf as inferred from stable isotopes}},
@@ -507,6 +497,16 @@ year = {2008},
 volume = {53},
 number = {2},
 pages = {788--798}
+}
+
+@article{Yeakel:2013vz,
+author = {Yeakel, Justin D and Moore, J W and Guimar{\~a}es Jr, Paulo R and de Aguiar, M A M},
+title = {{Synchronisation and stability in river metapopulation networks}},
+journal = {Ecol. Lett.},
+year = {2014},
+volume = {17},
+number = {3},
+pages = {273--283}
 }
 
 @book{Hanski:1999vu,
@@ -704,7 +704,7 @@ month = sep
 
 @book{AleksandrovichKuznetsov:1995p2580,
 author = {Kuznetsov, Y.A.},
-title = {{Elements of applied bifurcation theory}},
+title = {{Elements of Applied Bifurcation Theory}},
 publisher = {Springer},
 year = {1998},
 address = {New York}
@@ -795,14 +795,15 @@ pages = {881--900},
 month = jan
 }
 
-@article{Young:1999ut,
-author = {Young, Kyle A},
-title = {{Managing the decline of Pacific salmon: metapopulation theory and artificial recolonization as ecological mitigation}},
-journal = {Can. J. Fish. Aquat. Sci.},
-year = {1999},
-volume = {56},
-number = {9},
-pages = {1700--1706}
+@article{Falcy:2014en,
+author = {Falcy, Matthew R},
+title = {{Density-dependent habitat selection of spawning Chinook salmon: broad-scale evidence and implications}},
+journal = {J. Anim. Ecol.},
+year = {2014},
+volume = {84},
+number = {2},
+pages = {n/a--n/a},
+month = oct
 }
 
 @article{Quinn:2014bg,
@@ -816,19 +817,18 @@ pages = {1--12},
 month = aug
 }
 
-@article{Falcy:2014en,
-author = {Falcy, Matthew R},
-title = {{Density-dependent habitat selection of spawning Chinook salmon: broad-scale evidence and implications}},
-journal = {J. Anim. Ecol.},
-year = {2014},
-volume = {84},
-number = {2},
-pages = {n/a--n/a},
-month = oct
+@article{Young:1999ut,
+author = {Young, Kyle A},
+title = {{Managing the decline of Pacific salmon: metapopulation theory and artificial recolonization as ecological mitigation}},
+journal = {Can. J. Fish. Aquat. Sci.},
+year = {1999},
+volume = {56},
+number = {9},
+pages = {1700--1706}
 }
 
 @article{Shelton:2014br,
-author = {Shelton, Andrew Olaf and Samhouri, Jameal F and Stier, Adrian C and Levin, Philip S},
+author = {Shelton, Andrew Olaf and SAMHOURI, JAMEAL F and Stier, Adrian C and Levin, Philip S},
 title = {{Assessing trade-offs to inform ecosystem-based fisheries management of forage fish}},
 journal = {Sci. Rep.},
 year = {2014},
@@ -846,13 +846,6 @@ volume = {71},
 number = {7},
 pages = {959--972},
 month = mar
-}
-
-@article{Kuehn:2010tx,
-author = {Kuehn, C. and Siegmund, S. and Gross, T},
-title = {{On the dynamical analysis of evolution equations via generalized models}},
-journal = {Arxiv preprint arXiv:1012.4340},
-year = {2010}
 }
 
 @article{Thompson:2015hq,
@@ -874,6 +867,13 @@ volume = {14},
 number = {9},
 pages = {877--885},
 month = sep
+}
+
+@article{Kuehn:2010tx,
+author = {Kuehn, C. and Siegmund, S. and Gross, T},
+title = {{On the dynamical analysis of evolution equations via generalized models}},
+journal = {Arxiv preprint arXiv:1012.4340},
+year = {2010}
 }
 
 @article{Holling:1973hr,
@@ -1198,17 +1198,6 @@ number = {2},
 pages = {340--347}
 }
 
-@article{Wang:2014ec,
-author = {Wang, Shaopeng and Loreau, Michel},
-title = {{Ecosystem stability in space: $\alpha$, $\beta$ and $\gamma$ variability}},
-journal = {Ecol. Lett.},
-year = {2014},
-volume = {17},
-number = {8},
-pages = {891--901},
-month = may
-}
-
 @article{Fussmann:2007fo,
 author = {Fussmann, G. F. and Loreau, M and Abrams, P. A.},
 title = {{Eco-Evolutionary Dynamics of Communities and Ecosystems}},
@@ -1218,6 +1207,17 @@ volume = {21},
 number = {3},
 pages = {465--477},
 month = jun
+}
+
+@article{Wang:2014ec,
+author = {Wang, Shaopeng and Loreau, Michel},
+title = {{Ecosystem stability in space: $\alpha$, $\beta$ and $\gamma$ variability}},
+journal = {Ecol. Lett.},
+year = {2014},
+volume = {17},
+number = {8},
+pages = {891--901},
+month = may
 }
 
 @article{AndersonMay86,
